# proxyrr

./: README.md  pyproject.toml  setup.py
.circleci/: config.yml
src/proxyrr/: proxy_error.py  request_handler.py  request_mapper.py
test/: test_proxy_error.py  test_request_handler.py
